--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.0.0",
     "fastify-cors": "^6.0.3",
-    "fastify-socket.io": "^5.1.0",
+    
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
-    "nanoid": "^5.1.5",
-    "socket.io": "^4.8.1"
+    "nanoid": "^5.1.5"
+   
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
-    "@types/socket.io": "^3.0.1",
+    
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.2",
     "supertest": "^7.1.1",
